content browser will now display markdown files from "/Documentation" folder

--- a/MarkdownAsset.uplugin
+++ b/MarkdownAsset.uplugin
@@ -14,7 +14,7 @@
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
-	"EnabledByDefault": false,
+	"EnabledByDefault": true,
 	"Modules": [
 		{
 			"Name": "MarkdownAsset",
